log
Fri, May 16, 2025  6:49:20 PM: 
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
3f0e54c
Fri, May 16, 2025  6:50:02 PM: 
 tests:  0|5
total_score: 0/70
67eba21
Sat, May 17, 2025 11:21:20 AM: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  0|5
total_score: 0/70
ceda21e
Sat, May 17, 2025 11:25:56 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3e4c610
Sat, May 17, 2025 11:26:49 AM: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
f09f187
Sat, May 17, 2025 11:30:35 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
92ec06e
Sat, May 17, 2025 11:49:14 AM: 
 sudoku.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
8b04f9f
Sat, May 17, 2025 11:56:20 AM: 
 sudoku.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
120fdc9
Sat, May 17, 2025 11:56:58 AM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
16c08a3
Sat, May 17, 2025 11:57:48 AM: 
 sudoku.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
b1e15c2
Sat, May 17, 2025 11:59:52 AM: 
 sudoku.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  2|4
total_score: 15/70
0074630
Sat, May 17, 2025 12:03:12 PM: 
 sudoku.c | 15 ++++++---------
 1 file changed, 6 insertions(+), 9 deletions(-)
 tests:  2|4
total_score: 15/70
4dfc4b1
Sat, May 17, 2025 12:04:00 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
012e940
Sat, May 17, 2025 12:04:43 PM: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  2|4
total_score: 15/70
5ce2c9f
Sat, May 17, 2025 12:05:36 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
c177a89
Sat, May 17, 2025 12:07:55 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
0f3fe54
Sat, May 17, 2025 12:09:21 PM: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  5|3
total_score: 35/70
a0c42bd
Sat, May 17, 2025 12:17:05 PM: 
 sudoku.c | 17 ++++++++++++-----
 1 file changed, 12 insertions(+), 5 deletions(-)
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'is_valid':
sudoku.c:66:18: error: 'pos' undeclared (first use in this function); did you mean 'pop'?
   66 |         int i=3*(pos/3) + (p/3);
      |                  ^~~
      |                  pop
sudoku.c:66:18: note: each undeclared identifier is reported only once for each function it appears in
test.c: At top level:
test.c:7:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
0cfc9e7
Sat, May 17, 2025 12:17:52 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
8347569
Sat, May 17, 2025 12:22:29 PM: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
31eb2f4
Sat, May 17, 2025 12:25:17 PM: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  7|1
total_score: 55/70
b8cb5ca
